fix: water filter contrast + sitemap bump + Meta quantity field for FB Shop

--- a/src/css/pages/_product.scss
+++ b/src/css/pages/_product.scss
@@ -851,8 +851,8 @@ body {
                     border-bottom: 1px solid #F5F5F5;
 
                     @media (max-width: 768px) {
-                        border-top: 1px solid $grey-blue2;
-                        border-bottom: 1px solid $grey-blue2;
+                        border-top: 1px solid rgba(255, 255, 255, 0.6);
+                        border-bottom: 1px solid rgba(255, 255, 255, 0.6);
                     }
                 }
 
